@@ -83,7 +83,7 @@ public:
 	
 	MatrixRow( VECTOR& object, int i ) : parent(object), index(i){
 		if( ! ::Rf_isMatrix(parent) ) throw not_a_matrix() ;
-		if( i < 0 || i >= parent.nrow() ) throw RObject::index_out_of_bounds() ;
+		if( i < 0 || i >= parent.nrow() ) throw index_out_of_bounds() ;
 	}
 	
 	MatrixRow( const MatrixRow& other ) : parent(other.parent), index(other.index){} ;
